[package]
name = "gluon-runtime-api"
version = "2.0.0"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
sp-api = { version = '2.0.0', default-features = false}
sp-std = { default-features = false, version = '2.0.0' }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "codec/std",
	"sp-api/std",
    'sp-std/std',
]
